fixed spacing issues on contact page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -629,7 +629,7 @@ color: white;
 .secontent1 {
   position: relative;
   height:84vh;
-  padding-top: 8vh;
+  padding-top: 3vh;
   padding-bottom: 8vh;
   text-align: center;
 }
@@ -644,7 +644,7 @@ color: white;
 .insecontent1 {
   position: relative;
   height:84vh;
-  padding-top: 8vh;
+  padding-top: 3vh;
   padding-bottom: 8vh;
   margin-left: 50vw;
   color: white;
@@ -659,7 +659,7 @@ color: white;
 
 .pcarouselbot {
   position: relative;
-  top:50%;
+  top:30%;
   width:45vw;
   padding-left: 5vw;
   padding-bottom: 5vh;
@@ -677,21 +677,61 @@ color: white;
 
 .pcontent {
 
-  margin-right: 50vw;
+  margin-right: 55vw;
   text-align: center;
 }
 
 .pcontentbot {
   position: relative;
   top: 15vh;
+  left:12vw;
+  width:40vw;
   text-align: center;
 }
 
+.pcontentbot button {
+  margin-top: 3vh;
+  padding: 1vh 1.5vw 1vh 1.5vw;
+  background-color: #9370DB;
+  border-radius: 5px;
+  border-color: #9370DB;
+  border-width: 1px;
+  font-size: 16px;
+  font-weight: bold;
+  color:black;
+  transition: all 0.15s;
+  display: inline-block;
+  text-align: center;
+}
+
+.pcontentbot button:hover {
+  background-color: white;
+  color:black;
+  border-color: white;
+  cursor: pointer;
+}
+
 .footer {
-  height: 3vh;
+  height: 16vh;
   position: relative;
   top:100vh;
   background-color: black;
+  color: white;
+  font-size: 0.8vw;
+}
+
+.footersection {
+  padding-top: 3vh;
+ width: 100%;
+ height: 12vh;
+}
+
+.footerbot {
+  height: 3vh;
+}
+
+.footerbot p {
+  padding-top:0.25vh;
 }
 
 .pfooter {
